<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_bg_four" />

    <include layout="@layout/main_activity_toolbar"
             android:id="@+id/alarm_history"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            android:id="@+id/text_input_layout_current_password"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edit_text_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/current_password"
                android:textColor="@color/white"
                android:maxLength="11"
                android:textColorHint="@color/white"
                android:drawablePadding="15dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            android:id="@+id/text_input_layout_new_password"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edit_text_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/new_password"
                android:textColor="@color/white"
                android:maxLength="11"
                android:textColorHint="@color/white"
                android:drawablePadding="15dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_layout_confirm_new_password"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edit_text_confirm_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_new_password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:drawablePadding="15dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_user_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/submit"
            android:background="@color/white"
            android:textColor="@color/black" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        android:layout_marginLeft="25dp"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="@dimen/dp5"
            android:src="@drawable/ic_logo_datasoft"
            />
    </RelativeLayout>

</FrameLayout>
