<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:fitsSystemWindows="true"
              android:id="@+id/llUserActivityMain">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_bg_four" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/splashAnimation"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/smart_home_logo96x96"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="30dp"
                    android:textColor="@color/white"
                    android:text="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/button_user_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:background="@drawable/req_btn_bg" />

                <Button
                    android:id="@+id/button_user_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:background="@drawable/login_btn_bg" />

            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginLeft="25dp"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="@dimen/dp5"
                android:src="@drawable/ic_logo_datasoft"
                />
        </RelativeLayout>


    </FrameLayout>

</LinearLayout>