<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_bg_four"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="24dp"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingRight="24dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/smart_home_logo96x96"/>

        </LinearLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_input_layout_first_name"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/edit_text_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:hint="@string/first_name"
                        android:textColor="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_input_layout_last_name"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/edit_Text_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/last_name"
                        android:textColor="@color/white" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_input_layout_email"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:id="@+id/edit_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </android.support.design.widget.TextInputLayout>

                <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="8dp"-->
                    <!--android:layout_marginBottom="8dp">-->

                    <!--<EditText-->
                        <!--android:id="@+id/input_username"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:inputType="text"-->
                        <!--android:hint="@string/username_req"-->
                        <!--android:textColor="@color/white" />-->
                <!--</android.support.design.widget.TextInputLayout>-->

                <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.40"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:text="+88"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginTop="8dp"
                        android:id="@+id/text_input_layout_mobile_number"
                        app:counterEnabled="true"
                        app:counterMaxLength="11"
                        android:layout_marginBottom="8dp">

                        <EditText
                            android:id="@+id/edit_text_mobile_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:hint="@string/contact_no"
                            android:textColor="@color/white"
                            android:maxLength="11" />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


                <!--<CheckBox android:id="@+id/checkbox_new_user"-->
                          <!--android:layout_width="wrap_content"-->
                          <!--android:layout_height="wrap_content"-->
                          <!--android:text="@string/new_user"-->
                          <!--android:textColor="@color/white"-->
                          <!--android:onClick="onCheckboxClicked"/>-->


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_input_layout_password"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="15dp"
                    app:passwordToggleEnabled="true">




                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:textColor="@color/white"
                        android:maxLength="15" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_input_layout_confirm_password"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="15dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edit_text_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_password"
                        android:textColor="@color/white"
                        android:maxLength="15" />
                </android.support.design.widget.TextInputLayout>
                <!--<CheckBox android:id="@+id/checkbox_existing_user"-->
                          <!--android:layout_width="wrap_content"-->
                          <!--android:layout_height="wrap_content"-->
                          <!--android:text="@string/existing_user"-->
                          <!--android:textColor="@color/white"-->
                          <!--android:onClick="onCheckboxClicked"-->
                          <!--android:layout_marginBottom="@dimen/dp10"-->

                    <!--/>-->

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="Confirm Booking"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
