<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_bg_four" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:background="@drawable/smart_home_logo96x96"
            android:id="@+id/splashAnimation"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/smart_home_logo96x96"
            android:layout_gravity="center_horizontal" />

        <com.victor.loading.newton.NewtonCradleLoading
            android:id="@+id/newton_cradle_loading"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:visibility="gone"
            android:layout_centerInParent="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            android:id="@+id/text_input_layout_login_mobile_number"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edit_text_user_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/contact_no"
                android:textColor="@color/white"
                android:maxLength="11"
                android:drawablePadding="15dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_layout_login_password"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edit_text_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:drawablePadding="15dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_user_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:background="@color/white"
            android:textColor="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:text="Forgot Password ?"/>

        </RelativeLayout>
    </LinearLayout>


    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_gravity="bottom"-->
        <!--android:layout_marginBottom="@dimen/dp10"-->
        <!--android:layout_marginRight="@dimen/dp10"-->
        <!--android:layout_marginLeft="25dp"-->
        <!--android:layout_height="wrap_content">-->

        <!--<ImageView-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:src="@drawable/gp_logo_three"-->
            <!--/>-->
        <!--<ImageView-->
            <!--android:layout_width="70dp"-->
            <!--android:layout_height="70dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginRight="18dp"-->
            <!--android:layout_marginBottom="@dimen/dp5"-->
            <!--android:src="@drawable/ic_logo_datasoft"-->
            <!--/>-->
    <!--</RelativeLayout>-->

</FrameLayout>
